don't process draft article

--- a/vignettes/articles/piped_operations.Rmd
+++ b/vignettes/articles/piped_operations.Rmd
@@ -5,7 +5,8 @@ title: "Piped operations, starting from Wikipedia pages"
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
@@ -41,7 +42,7 @@ tw_create_cache_folder(ask = FALSE)
 
 More advanced users, especially those relying on `tidywikidatar` in Shiny apps, may instead prefer relying on a MySql database, setting up the connection at the beginning of eash session as follows.
 
-```{r setup custom_db, eval=TRUE}
+```{r setup custom_db}
 library(dplyr, warn.conflicts = FALSE)
 library("tidywikidatar")
 
@@ -225,7 +226,7 @@ Here we already start to meet some of the quirks of Wikidata.
 
 The question "in which country is this city located" seems straightforward, but as illustrated [in the package readme](https://edjnet.github.io/tidywikidatar/#getting-the-right-property-when-more-than-one-is-available) it actually isn't always the case, as, for example, London has many values for the property "country", all the way from "Roman Empire" through "United Kingdom". Enabling the `only_first` parameters, which is a the most efficient option in many circumstances, is not a sensible solution in this case, as predicting the order of properties is not straightforward. To make things easier `tidywikidatar` includes dedicated parameters: `preferred` (which gives back the value recorded as "preferred"), and `latest_start_time` (which checks the qualifiers, and selects the one with the most recent "start time").
 
-```{r eval = TRUE}
+```{r}
 meps9_pob_df %>% 
   mutate(pob_country_id = tw_get_p(id = place_of_birth_id,
                                    p = "P17",
